# test-data-engineer-repl

./: README.md  etl.py  pyproject.toml
data/central/: CatLineasAereas.csv
data/sucursal1/: pasajeros.csv  vuelos.csv
data/sucursal2/: Pasajeros.csv  Vuelos.csv
